# fade

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml  test.yml
assets/icons/: LICENSES.md
docs/: blank-screen-fallback.md
docs/superpowers/plans/: 2026-04-13-foreground-event-hook.md  2026-04-15-unified-ui-redesign.md  2026-04-16-ui-visual-fixes.md  2026-04-22-phase-2.md
docs/superpowers/specs/: 2026-04-16-ui-visual-fixes-design.md  2026-04-22-phase-2-design.md
src/: autostart.rs  buckets.rs  config.rs  filter.rs  icon_catalog.rs  icons.rs  main.rs  monitor.rs  tray.rs  winapi.rs
ui/: main.slint  style.slint
