[package]
name = "fade"
version = "0.1.0"
edition = "2021"
description = "Idle window manager — automatically minimizes or closes inactive windows"
build = "build.rs"

[dependencies]
slint = { version = "1.11", default-features = false, features = ["std", "compat-1-2", "backend-winit", "renderer-software"] }
auto-launch = "0.5"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
log = "0.4"
env_logger = "0.11"

[target.'cfg(windows)'.dependencies]
tray-icon = "0.19"
muda = "0.15"
image = { version = "0.25", default-features = false, features = ["png"] }

[target.'cfg(windows)'.dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_Graphics_Gdi",
]

[build-dependencies]
slint-build = "1.11"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
